# HMCLauncher

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-launcher.yml  build.yml
HMCL/: HMCL.rc  HMCL.rc.in  config.h.in  debug.cpp  debug.h  i18n.cpp  i18n.h  java.cpp  java.h  lang.h  main.cpp  os.cpp  os.h  path.cpp  path.h  platform.cpp  platform.h  resource.h  targetver.h
publish/: .gitignore  build.gradle.kts  create-bundle.sh  pom.xml  settings.gradle.kts
